# term-seq

./: .gitignore  Cargo.toml  README.md
src/: filescale.rs  main.rs  modname.rs  note.rs  notescale.rs  pianoscale.rs  player.rs  sinescale.rs  track.rs
