[package]
name = "term-seq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.25"
log = "0.4.18"
simple-logging = "2.0.2"
strfmt = "0.2.4"
anyhow = "1.0.71"
kira = "0.8.3"
